--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,37 @@
+
 body {
-    background-color: red;
+    background-color: #a10023;
+}
+
+h1 {
+	color: white;
+    background-color: yellow;
+    border-radius: 100px;
+    line-height: 100px;
+    text-align: center; 
+    height: 100px; 
+    width: 100px;
+}
+
+h1:hover {
+	background: blue;
+	transition: background .25s;
+}
+
+h3 {
+    background-color: green;
+
+}
+
+p {
+    background-color: cornflowerblue;
+
+}
+
+a {
+	background: green;
+	display: block;
+	height: 100px; 
+    width: 100px;
+
 }
